--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,14 +11,14 @@ jobs:
         id: release
         with:
           release-type: node
-          package-name: "fetch-github-release"
+          package-name: 'fetch-github-release'
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
       - uses: actions/setup-node@v2
         with:
-          node-version: "*"
+          node-version: '*'
           check-latest: true
-          registry-url: "https://registry.npmjs.org"
+          registry-url: 'https://registry.npmjs.org'
         if: ${{ steps.release.outputs.release_created }}
       - run: npm publish
         if: ${{ steps.release.outputs.release_created }}
